trunk/Archive2/ca/9c569843a9a710/output
main.cpp: In function ‘int main()’:
main.cpp:17:14: error: ‘list’ was not declared in this scope
    int maxOf(list<unsigned> l)
              ^
main.cpp:17:19: error: expected primary-expression before ‘unsigned’
    int maxOf(list<unsigned> l)
                   ^
main.cpp:18:1: error: expected ‘,’ or ‘;’ before ‘{’ token
 {
 ^
main.cpp:17:8: warning: unused variable ‘maxOf’ [-Wunused-variable]
    int maxOf(list<unsigned> l)
        ^
main.cpp:28:1: error: expected ‘}’ at end of input
 }
 ^
